# Volume-Threshold-Detection

./: .gitignore  CMakeLists.txt  project.yml  run.sh
.github/workflows/: checkpatch.yml  cppcheck.yml  main.yml  unit-tests.yml
docs/: base_flow.uxf  base_fw_design.uxf  layer_design.uxf
src/: main.c  parameters.h
src/drivers/: CMakeLists.txt  dma.c  gp-timer.c  gpio.c  i2s.c
src/drivers/include/: dma.h  gp-timer.h  gpio.h  i2s.h
src/lib/: CMakeLists.txt  linked-list.c  low-pass-Filter.c  thresholds.c
src/lib/include/: linked-list.h  low-pass-Filter.h  thresholds.h
src/platform/stm32f407G/: CMakeLists.txt  linker.ld  platform_init.c  startup.c
src/platform/stm32f407G/include/: platform_defs.h  platform_init.h
test/: test_linked-list.c  test_thresholds.c
toolchains/: compiler-flags.cmake
