include("${PROJECT_SOURCE_DIR}/toolchains/compiler-flags.cmake")
add_library(testd test-driver.c)
target_include_directories(testd PUBLIC  "${PROJECT_BINARY_DIR}" "${PROJECT_SOURCE_DIR}/src/drivers/include")
add_library(gpio gpio.c)
target_include_directories(gpio PUBLIC  "${PROJECT_BINARY_DIR}" "${PROJECT_SOURCE_DIR}/src/drivers/include" "${PROJECT_SOURCE_DIR}/src/platform/stm32f407G/include")
add_library(dma dma.c)
target_include_directories(dma PUBLIC  "${PROJECT_BINARY_DIR}" "${PROJECT_SOURCE_DIR}/src/drivers/include" "${PROJECT_SOURCE_DIR}/src/platform/stm32f407G/include")